update welsh opening hours text.

--- a/app/resources/cy/translation/common.json
+++ b/app/resources/cy/translation/common.json
@@ -81,16 +81,16 @@
   "helpEmail": "ymholiadaucymraeg@justice.gov.uk",
   "helpTelephoneNumber": "0300 303 0654",
   "helpTelephoneOpeningHoursTitle": "Amseroedd agor (sgwrsio dros y we a'r ffôn)",
-  "helpTelephoneOpeningHours": "Dydd Llun i ddydd Iau, 9am – 5pm, dydd Gwener, 9am – 4.30pm.",
-  "helpTelephoneOpeningHours1": "Dydd Llun i ddydd Iau 9am – 5pm, dydd Gwener 9am - 4.30pm",
+  "helpTelephoneOpeningHours": "Dydd Llun i ddydd Iau, 9:00am – 4:30pm a Dydd Gwener 9:00am i 4:00pm.",
+  "helpTelephoneOpeningHours1": "Dydd Llun i ddydd Iau, 9:00am – 4:30pm a Dydd Gwener 9:00am i 4:00pm.",
   "helpTelephoneOpeningHours2": "Ar gau ar ddyddiau Sadwrn, Sul a gwyliau banc",
   "helpChatDown": "Nid yw&rsquo;r gwasanaeth sgwrsio dros y we ar gael ar hyn o bryd, rhowch gynnig arall arni hwyrach ymlaen.",
   "helpChatWithAnAgent": "Sgwrsio dros y we gydag asiant",
   "helpNoAgentsAvailable": "Nid oes asiant ar gael ar hyn o bryd, rhowch gynnig arall arni hwyrach ymlaen.",
   "helpAllAgentsBusy": "Mae ein cynghorwyr i gyd yn brysur. Rhowch gynnig arall arni ymhen ychydig funudau.",
-  "helpChatClosed": "Mae&rsquo;r gwasanaeth sgwrsio dros y we nawr ar gau. Yr oriau agor yw {chatOpeningHours}.",
+  "helpChatClosed": "Mae&rsquo;r gwasanaeth sgwrsio dros y we nawr ar gau. Yr oriau agor yw {chatOpeningHours}",
   "helpChatAlreadyOpen": "Mae ffenestr sgwrsio dros y we ar agor yn barod.",
-  "helpChatOpeningHours": "Dydd Llun i ddydd Gwener, 8:00am i 6:00pm.",
+  "helpChatOpeningHours": "Dydd Llun i ddydd Iau, 9:00am – 4:30pm a Dydd Gwener 9:00am i 4:00pm.",
   "helpChatMaintenance": "Nid yw gwasanaeth sgwrsio dros y we profiant ar gael dros dro tra byddwn yn ceisio datrys problem dechnegol. Ymddiheurwn am unrhyw anghyfleustra a achosir.",
   "helpChatCheckingAvail": "Gwirio argaeledd…",
   "helpChatNeedsJavascript": "Mae sgwrsio dros y we yn gofyn i JavaScript fod yn weithredol. Sicrhewch fod JavaScript yn weithredol yn gosodiadau eich porwr i ddefnyddio’r nodwedd hon.",
