DTSPB-4801: Update Welsh "new window" -> "new tab" (#2662)

--- a/app/resources/cy/translation/screeners/deceaseddomicile.json
+++ b/app/resources/cy/translation/screeners/deceaseddomicile.json
@@ -2,7 +2,7 @@
   "eligibilityTitle": "Gwiriwch i weld os yw’n bosib i chi wneud cais ar-lein",
   "title": "Preswylfa&rsquo;r unigolyn sydd wedi marw",
   "question": "A oedd yr unigolyn sydd wedi marw yn byw&rsquo;n barhaol yng Nghymru neu Lloegr, neu&rsquo;n bwriadu dychwelyd yma?",
-  "hintText1": "Gelwir hyn yn &lsquo;bod &acirc;&rsquo;u domisil yn y DU&rsquo;. Rhagor o wybodaeth am <a href=\"https://www.gov.uk/inheritance-tax/when-someone-living-outside-the-uk-dies\" class=\"govuk-link\" target=\"_blank\" rel=\"external noopener\" aria-label=\"pan fydd rhywun sy&rsquo;n byw y tu allan i&rsquo;r DU yn marw (yn agor mewn ffenest newydd)\">pan fydd rhywun sy&rsquo;n byw y tu allan i&rsquo;r DU yn marw (yn agor mewn ffenest newydd)</a>.",
+  "hintText1": "Gelwir hyn yn &lsquo;bod &acirc;&rsquo;u domisil yn y DU&rsquo;. Rhagor o wybodaeth am <a href=\"https://www.gov.uk/inheritance-tax/when-someone-living-outside-the-uk-dies\" class=\"govuk-link\" target=\"_blank\" rel=\"external noopener\" aria-label=\"pan fydd rhywun sy&rsquo;n byw y tu allan i&rsquo;r DU yn marw (yn agor mewn tab newydd)\">pan fydd rhywun sy&rsquo;n byw y tu allan i&rsquo;r DU yn marw (yn agor mewn tab newydd)</a>.",
   "optionYes": "Oedd",
   "optionNo": "Nag oedd",
   "errors": {
