--- a/app/resources/en/translation/citizenshub.json
+++ b/app/resources/en/translation/citizenshub.json
@@ -51,7 +51,7 @@
   "grantIssuedParagraph1": "You should get the grant within 2 week of it being issued.",
   "grantIssuedParagraph2": "If there’s anything wrong with the probate document, return it to the district probate registry listed on the grant.",
   "helpfulInformationHeading": "Helpful Information",
-  "grantIssuedParagraph3": "Find out what to do <a href=\"https://www.gov.uk/applying-for-probate/after-youve-applied\" class=\"govuk-link\" target=\"_blank\">when you receive your grant</a><br><br>Order more copies of your grant using the <a href=\"https://www.gov.uk/search-will-probate\" class=\"govuk-link\" target=\"_blank\">Search probate records for documents and wills</a> service.<br><br>If you ordered copies of your probate document for use outside the UK, also known as ‘sealed and certified’ copies, these will take upto 2 weeks longer to arrive than your UK copy.",
+  "grantIssuedParagraph3": "Find out what to do <a href=\"https://www.gov.uk/applying-for-probate/after-youve-applied\" class=\"govuk-link\" target=\"_blank\">when you receive your grant (opens in a new tab)</a>.<br><br>Order more copies of your grant using the <a href=\"https://www.gov.uk/search-will-probate\" class=\"govuk-link\" target=\"_blank\">Search probate records for documents and wills (opens in a new tab)</a> service.<br><br>If you ordered copies of your probate document for use outside the UK, also known as ‘sealed and certified’ copies, these will take upto 2 weeks longer to arrive than your UK copy.",
   "declarationPdf": "View my legal declaration (10kb PDF)",
   "checkAnswersPdf": "View my probate application (10kb PDF)",
   "sideBarHeading": "I want to...",
