--- a/app/resources/cy/translation/screeners/starteligibility.json
+++ b/app/resources/cy/translation/screeners/starteligibility.json
@@ -10,6 +10,7 @@
   "listItem3": "enw, cyfeiriad e-bost a rhif ffôn symudol pob unigolyn sy&rsquo;n gwneud cais am brofiant",
   "listItem4": "gwerthoedd yr ystad ar gyfer Treth Etifeddiant (IHT) – gallwch amcangyfrif y rhain gan ddefnyddio ",
   "listItem5": "cerdyn debyd neu gredyd, os oes angen i chi dalu ffi",
+  "listItem6": "Os na wnaeth yr unigolyn bu farw adael ewyllys, rhaid i chi hefyd <a href=\"https://www.gov.uk/inherits-someone-dies-without-will\" class=\"govuk-link\" target=\"_blank\" rel=\"external noopener\" aria-label=\"wirio os mai chi yw’r unigolyn sydd â’r hawl fwyaf i wneud cais (yn agor mewn tab newydd)\">wirio os mai chi yw’r unigolyn sydd â’r hawl fwyaf i wneud cais (yn agor mewn tab newydd)</a> cyn i chi ddechrau.",
   "linkText3": "gwiriwr IHT ar-lein (yn agor mewn tab newydd)",
   "applicationStartedHeader": "Ydych chi eisoes wedi dechrau cais?",
   "paragraph3": "Dychwelyd i gais presennol"
