--- a/app/resources/en/translation/screeners/relatedtodeceased.json
+++ b/app/resources/en/translation/screeners/relatedtodeceased.json
@@ -1,15 +1,22 @@
 {
   "eligibilityTitle": "Check if you can apply online",
-  "title": "Are you the spouse, civil partner or child of the person who died",
-  "question": "Are you the spouse, civil partner or child of the person who died?",
-  "hintText1": "This does not include long-term partners who lived together but did not marry or enter into a civil partnership.",
-  "hintText2": "You may need to provide your certificate of marriage or civil partnership.",
-  "optionYes": "Yes",
-  "optionNo": "No",
+  "title": "What is your relationship to the person who died",
+  "question": "What is your relationship to the person who died?",
+  "optionPartner": "I am their husband, wife or registered civil partner",
+  "hintTextPartner": "Not including unmarried or unregistered partners living together",
+  "optionChild": "I am their child",
+  "hintTextChild": "Including adopted children, but not step-children",
+  "optionGrandchild": "I am their grandchild",
+  "hintTextGrandchild": "Including adopted grandchildren, but not step-grandchildren",
+  "optionParent": "I am their parent",
+  "hintTextParent": "Including adoptive parents, but not step-parents",
+  "optionSibling": "I am their sibling",
+  "hintTextSibling": "Including adopted and half-siblings, but not step-siblings",
+  "optionNone": "None of the above",
 
   "errors": {
     "related": {
-      "required": "Select &lsquo;yes&rsquo; if you&rsquo;re the spouse, civil partner or child of the person who died"
+      "required": "Select what your relationship to the person who died is"
     }
   }
 }
