--- a/app/resources/cy/translation/deceased/maritalstatus.json
+++ b/app/resources/cy/translation/deceased/maritalstatus.json
@@ -6,6 +6,7 @@
   "optionWidowed": "Gweddw",
   "optionNotMarried": "Erioed wedi priodi",
   "optionSeparated": "Ymwahaniad cyfreithiol",
+  "hintTextMarried": "Rhaid bod partneriaeth sifil wedi’i chofrestru ac mae’n wahanol i fyw gyda’ch gilydd fel partneriaid",
   "divorce": "wedi ysgaru",
   "separation": "wedi gwahanu",
   "theDeceased": "yr unigolyn sydd wedi marw",
