--- a/app/resources/en/translation/deceased/dod.json
+++ b/app/resources/en/translation/deceased/dod.json
@@ -1,7 +1,7 @@
 {
   "title": "Deceased date of death",
-  "question": "What was the date that they died?",
-  "questionHint": "Use the date from the death certificate. For example, 30 06 2016",
+  "question": "What was the date that {deceasedName} died?",
+  "questionHint": "Use the date from the death certificate. For example, 30 01 2025",
 
   "errors": {
     "dod-day": {
