--- a/app/resources/en/translation/iht/assetsoutside.json
+++ b/app/resources/en/translation/iht/assetsoutside.json
@@ -1,7 +1,7 @@
 {
   "title": "Assets outside of England and Wales",
   "question": "Did {deceasedName} have any assets outside of England and Wales?",
-  "hint": "Don&rsquo;t include houses or land.",
+  "hint": "Do not include any houses or land.",
   "optionYes": "Yes",
   "optionNo": "No",
 
