--- a/app/resources/cy/translation/deceased/dob.json
+++ b/app/resources/cy/translation/deceased/dob.json
@@ -1,23 +1,23 @@
 {
   "title": "Dyddiad geni&rsquo;r unigolyn sydd wedi marw",
-  "question": "Beth oedd eu dyddiad geni?",
-  "questionHint": "Er enghraifft, 31 03 1945",
+  "question": "Beth oedd dyddiad geni {deceasedName}?",
+  "questionHint": "Er enghraifft, 30 03 1945",
 
   "errors": {
     "dob-day": {
-      "required": "Nodwch y diwrnod y cawsant eu geni",
+      "required": "Rhaid i’r dyddiad geni gynnwys diwrnod",
       "invalid": "Nodwch ddiwrnod geni dilys"
     },
     "dob-month": {
-      "required": "Nodwch y mis y cawsant eu geni",
+      "required": "Rhaid i’r dyddiad geni gynnwys mis",
       "invalid": "Nodwch fis geni dilys"
     },
     "dob-year": {
-      "required": "Nodwch y flwyddyn y cawsant eu geni",
+      "required": "Rhaid i’r dyddiad geni gynnwys blwyddyn",
       "invalid": "Nodwch flwyddyn geni ddilys"
     },
     "dob-date": {
-      "required": "Nodwch y dyddiad cawsant eu geni",
+      "required": "Nodwch y dyddiad pan ganwyd {deceasedName}",
       "invalid": "Nodwch ddyddiad geni dilys",
       "dateInFuture": "Nodwch ddyddiad yn y gorffennol",
       "dodBeforeDob": "Nodwch ddyddiad geni sydd cyn dyddiad y farwolaeth"
