--- a/app/resources/cy/translation/iht/assetsoutside.json
+++ b/app/resources/cy/translation/iht/assetsoutside.json
@@ -1,7 +1,7 @@
 {
   "title": "Asedau y tu allan i Gymru a Lloegr",
   "question": "A oedd gan {deceasedName} unrhyw asedau y tu allan i Gymru a Lloegr?",
-  "hint": "Peidiwch &acirc; chynnwys tai na thir.",
+  "hint": "Peidiwch â chynnwys tai na thir.",
   "optionYes": "Oedd",
   "optionNo": "Nac oedd",
 
