--- a/app/resources/en/translation/deceased/dob.json
+++ b/app/resources/en/translation/deceased/dob.json
@@ -1,23 +1,23 @@
 {
   "title": "Deceased date of birth",
-  "question": "What was their date of birth?",
-  "questionHint": "For example, 31 03 1945",
+  "question": "What was {deceasedName}’s date of birth?",
+  "questionHint": "For example, 30 03 1945",
 
   "errors": {
     "dob-day": {
-      "required": "Enter the day they were born",
+      "required": "Date of birth must include a day",
       "invalid": "Enter a valid day of birth"
     },
     "dob-month": {
-      "required": "Enter the month they were born",
+      "required": "Date of birth must include a month",
       "invalid": "Enter a valid month of birth"
     },
     "dob-year": {
-      "required": "Enter the year they were born",
+      "required": "Date of birth must include a year",
       "invalid": "Enter a valid year of birth"
     },
     "dob-date": {
-      "required": "Enter the date they were born",
+      "required": "Enter the date {deceasedName} was born",
       "invalid": "Enter a valid date of birth",
       "dateInFuture": "Enter a date in the past",
       "dodBeforeDob": "Enter a date of birth that is before the date of death"
