DTSPB-4689 Added validations and modified tests

--- a/app/resources/cy/translation/addressLookup.json
+++ b/app/resources/cy/translation/addressLookup.json
@@ -1,8 +1,8 @@
 {
   "errors": {
     "postcode": {
-      "required": "Nodwch god post",
-      "invalid": "Nodwch god post dilys",
+      "required": "Nodwch god post yn y DU yn llawn",
+      "invalid": "Nodwch god post yn y DU sy’n ddilys",
       "noAddresses": "Nodwch god post dilys"
     }
   }
