--- a/app/resources/cy/translation/deceased/otherNames.json
+++ b/app/resources/cy/translation/deceased/otherNames.json
@@ -9,12 +9,16 @@
 
   "errors": {
     "firstName": {
-      "required": "Nodwch enw cyntaf yr unigolyn sydd wedi marw",
-      "invalid": "Rhowch enw cyntaf dilys - dim ond llythrennau a i z, bylchau, cysylltnodau a chollnodau y gellir eu cynnwys"
+      "required": "Nodwch enw cyntaf arall {deceasedName} a ddefnyddir",
+      "invalid": "Rhaid i’r enw cyntaf ond cynnwys llythrennau o a i z, a nodau arbenning fel cysylltnodau, bylchau a chollnodau",
+      "minLength": "Rhaid i’r enw cyntaf fod yn 2 o nodau neu fwy",
+      "maxLength": "Rhaid i’r enw cyntaf fod yn 100 o nodau neu lai"
     },
     "lastName": {
-      "required": "Nodwch gyfenw&rsquo;r unigolyn sydd wedi marw",
-      "invalid": "Rhowch enw olaf dilys - dim ond llythrennau a i z, bylchau, cysylltnodau a chollnodau y gellir eu cynnwys"
+      "required": "Nodwch gyfenw arall {deceasedName} a ddefnyddir",
+      "invalid": "Rhaid i’r cyfenw ond cynnwys llythrennau o a i z, a nodau arbennig fel cysylltnodau, bylchau a chollnodau",
+      "minLength": "Rhaid i’r cyfenw fod yn 2 o nodau neu fwy",
+      "maxLength": "Rhaid i’r cyfenw fod yn 100 o nodau neu lai"
     }
   }
 }
