--- a/app/resources/en/translation/deceased/maritalstatus.json
+++ b/app/resources/en/translation/deceased/maritalstatus.json
@@ -13,7 +13,7 @@
 
   "errors": {
     "maritalStatus": {
-      "required": "Choose a marital status option"
+      "required": "Select {deceasedName}&rsquo;s marital status at the time of their death"
     }
   }
 }
