DTSPB-4967 add feature toggle for the Fee Increase 2025

--- a/app/resources/cy/translation/copies/uk.json
+++ b/app/resources/cy/translation/copies/uk.json
@@ -4,12 +4,8 @@
   "paragraph1": "Byddwch yn cael copi swyddogol am ddim o grant profiant gyda&rsquo;ch ffi gwneud cais.",
   "paragraph2": "Archebwch gop&iuml;au swyddogol ychwanegol o&rsquo;r grant os oes angen i chi eu hanfon at wahanol ddeiliaid asedau, er enghraifft, copi ar gyfer banciau, polis&iuml;au yswiriant, cyfranddaliadau ac eiddo. ",
   "paragraph3": "Mae cop&iuml;au swyddogol ychwanegol yn costio &pound;16.00 yr un ",
+  "paragraph3Fee2025": "Mae cop&iuml;au swyddogol ychwanegol yn costio &pound;16.00 yr un ",
   "copies": "Nifer y cop&iuml;au swyddogol ychwanegol",
-  "questionOld": "Faint o gop&iuml;au swyddogol ychwanegol o&rsquo;r grant sydd eu hangen arnoch i&rsquo;w defnyddio yn y DU?",
-  "paragraph1Old": "Byddwch yn cael copi swyddogol am ddim o grant profiant gyda&rsquo;ch ffi gwneud cais. ",
-  "paragraph2Old": "Archebwch gop&iuml;au swyddogol ychwanegol o&rsquo;r grant os oes angen i chi eu hanfon at wahanol ddeiliaid asedau, er enghraifft, copi ar gyfer banciau, polis&iuml;au yswiriant, cyfranddaliadau ac eiddo. ",
-  "paragraph3Old": "Mae cop&iuml;au swyddogol ychwanegol yn costio &pound;16.00 yr un ",
-  "copiesOld": "Nifer y cop&iuml;au swyddogol ychwanegol",
 
   "detailTitle": "Beth yw copi swyddogol?",
   "detailText1": "Mae'n gopi o&rsquo;r grant gyda s&ecirc;l holograffig lliw arian ar ei flaen. Gall banc ofyn i chi am gopi ardystiedig i ryddhau arian i chi.",
