--- a/app/resources/en/translation/copies/uk.json
+++ b/app/resources/en/translation/copies/uk.json
@@ -3,13 +3,15 @@
   "question": "How many extra official copies of the grant do you need for use in the UK?",
   "paragraph1": "You&rsquo;ll receive a free official copy of a grant of probate with your application fee.",
   "paragraph2": "Order extra official copies of the grant if you need to send them to different asset holders, for example, a copy for banks, insurance policies, shares and property.",
-  "paragraph3": "Extra official copies cost &pound;16.00 each",
+  "paragraph3": "Extra official copies cost &pound;1.50 each",
+  "paragraph3Fee2025": "Extra official copies cost &pound;16.00 each",
   "copies": "Number of extra official copies",
 
   "questionOld": "How many extra official copies of the grant do you need for use in the UK?",
   "paragraph1Old": "You&rsquo;ll receive a free official copy of a grant of probate with your application fee.",
   "paragraph2Old": "Order extra official copies of the grant if you need to send them to different asset holders, for example, a copy for banks, insurance policies, shares and property.",
-  "paragraph3Old": "Extra official copies cost &pound;16.00 each",
+  "paragraph3Old": "Extra official copies cost &pound;1.50 each",
+  "paragraph3OldFee2025": "Extra official copies cost &pound;16.00 each",
   "copiesOld": "Number of extra official copies",
 
   "detailTitle": "What is an official copy?",
