DTSPB-4967 adding copiesUKFee in default.yaml

--- a/app/resources/cy/translation/copies/uk.json
+++ b/app/resources/cy/translation/copies/uk.json
@@ -3,8 +3,7 @@
   "question": "Faint o gop&iuml;au swyddogol ychwanegol o&rsquo;r grant sydd eu hangen arnoch i&rsquo;w defnyddio yn y DU? ",
   "paragraph1": "Byddwch yn cael copi swyddogol am ddim o grant profiant gyda&rsquo;ch ffi gwneud cais.",
   "paragraph2": "Archebwch gop&iuml;au swyddogol ychwanegol o&rsquo;r grant os oes angen i chi eu hanfon at wahanol ddeiliaid asedau, er enghraifft, copi ar gyfer banciau, polis&iuml;au yswiriant, cyfranddaliadau ac eiddo. ",
-  "paragraph3": "Mae cop&iuml;au swyddogol ychwanegol yn costio &pound;1.50 yr un ",
-  "paragraph3Fee2025": "Mae cop&iuml;au swyddogol ychwanegol yn costio &pound;16.00 yr un ",
+  "paragraph3": "Mae cop&iuml;au swyddogol ychwanegol yn costio &pound;{copiesUKFee} yr un ",
   "copies": "Nifer y cop&iuml;au swyddogol ychwanegol",
 
   "detailTitle": "Beth yw copi swyddogol?",
