--- a/app/resources/en/translation/applicant/relationshiptodeceased.json
+++ b/app/resources/en/translation/applicant/relationshiptodeceased.json
@@ -1,9 +1,16 @@
 {
   "title": "Relationship to the deceased",
-  "question": "What was your relationship to the person who died?",
-  "optionSpousePartner": "Husband, wife or civil partner (this does not include common law partners even if you lived together)",
-  "optionChild": "Child (this does not include stepchildren)",
-  "optionAdoptedChild": "Child who was lawfully adopted",
+  "question": "What is your relationship to {{deceasedName}}?",
+  "optionSpousePartner": "I am their husband, wife or registered civil partner",
+  "hintSpousePartner": "Not including unmarried or unregistered partners living together",
+  "optionChild": "I am their child",
+  "hintChild": "Including adopted children, but not step-children",
+  "optionGrandchild": "I am their grandchild",
+  "hintGrandchild": "Including adopted grandchildren, but not step-grandchildren",
+  "optionParent": "I am their parent",
+  "hintParent": "including adoptive parents, but not step-parents",
+  "optionSibling": "I am their sibling",
+  "hintSibling": "Including adopted and half-siblings, but not step-siblings",
   "optionOther": "Other",
 
   "errors": {
