--- a/app/resources/en/translation/applicant/relationshiptodeceased.json
+++ b/app/resources/en/translation/applicant/relationshiptodeceased.json
@@ -15,7 +15,7 @@
 
   "errors": {
     "relationshipToDeceased": {
-      "required": "Choose an option for your relationship to the person who died"
+      "required": "Choose an option for your relationship to {deceasedName}"
     }
   }
 }
